--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -1,7 +1,7 @@
 name: Publish to Anaconda
 on:
-  push: { branches: [ "main" ] }
-  pull_request: { branches: [ "main" ] }
+  push: { branches: [ "master" ] }
+  pull_request: { branches: [ "master" ] }
 
 jobs:
   conda-build:
